Moved code that doesn't belong in `net-server-netty4` to the `server` submodule (which will become something like `endpoint` in the future)