@@ -1,7 +1,5 @@
 plugins {
     netrune
-
-    application
 }
 
 dependencies {
@@ -9,19 +7,4 @@ dependencies {
 
     api(projects.netServer)
     api(projects.netNetty4)
-
-    api(projects.codecGameOsrsV209)
-}
-
-application {
-    mainClass.set("org.jire.netrune.server.Main")
-    applicationDefaultJvmArgs = listOf(
-        "-XX:-OmitStackTraceInFastThrow",
-        "--add-opens=java.base/java.time=ALL-UNNAMED",
-        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
-    )
 }
